packages/next-swc/crates/core/tests/errors/next-font-loaders/spread-arg/output.js
import inter from '@next/font/google/target.css?{"arguments":[{},[]],"import":"Inter","path":"pages/test.tsx","variableName":"inter"}';
const a = fn(...{}, ...[]);
